Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-90580

tst_QQuickMenu::Material::subMenuDisabledMouse(non-cascading) fails on Ubuntu 20.04

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Done
    • Icon: P1: Critical P1: Critical
    • 6.1.0 Alpha
    • 6.1
    • Quick: Controls 2
    • None
    • 80039621c01c69ee857fa1c7f0e2d7c46e2d7b64 (qt/qtquickcontrols2/dev)

       9363: ********* Start testing of tst_QQuickMenu *********
       FAIL!  : tst_QQuickMenu::Material::subMenuDisabledMouse(non-cascading) '!subMenuItem1->isHighlighted()' returned FALSE. ()
          Loc: [/home/qt/work/qt/qtquickcontrols2/tests/auto/qquickmenu/tst_qquickmenu.cpp(1206)]
       PASS   : tst_QQuickMenu::Material::subMenuKeyboard(cascading)
       PASS   : tst_QQuickMenu::Material::subMenuKeyboard(cascading,mirrored)
       Totals: 289 passed, 1 failed, 0 skipped, 0 blacklisted, 111340ms
       
       
       9668: ********* Start testing of tst_QQuickMenu *********
       FAIL!  : tst_QQuickMenu::Material::subMenuDisabledMouse(non-cascading) '!subMenuItem1->isHighlighted()' returned FALSE. ()
          Loc: [/home/qt/work/qt/qtquickcontrols2/tests/auto/qquickmenu/tst_qquickmenu.cpp(1206)]
       PASS   : tst_QQuickMenu::Material::subMenuKeyboard(cascading)
       PASS   : tst_QQuickMenu::Material::subMenuKeyboard(cascading,mirrored)
       Totals: 289 passed, 1 failed, 0 skipped, 0 blacklisted, 111928ms
       
       
       9973: ********* Start testing of tst_QQuickMenu *********
       FAIL!  : tst_QQuickMenu::Material::subMenuDisabledMouse(non-cascading) '!subMenuItem1->isHighlighted()' returned FALSE. ()
          Loc: [/home/qt/work/qt/qtquickcontrols2/tests/auto/qquickmenu/tst_qquickmenu.cpp(1206)]
       PASS   : tst_QQuickMenu::Material::subMenuKeyboard(cascading)
       PASS   : tst_QQuickMenu::Material::subMenuKeyboard(cascading,mirrored)
       Totals: 289 passed, 1 failed, 0 skipped, 0 blacklisted, 110704ms
       
       
       10278: ********* Start testing of tst_QQuickMenu *********
       FAIL!  : tst_QQuickMenu::Imagine::subMenuDisabledMouse(non-cascading) '!subMenuItem1->isHighlighted()' returned FALSE. ()
          Loc: [/home/qt/work/qt/qtquickcontrols2/tests/auto/qquickmenu/tst_qquickmenu.cpp(1206)]
       PASS   : tst_QQuickMenu::Imagine::subMenuKeyboard(cascading)
       PASS   : tst_QQuickMenu::Imagine::subMenuKeyboard(cascading,mirrored)
       FAIL!  : tst_QQuickMenu::Material::subMenuDisabledMouse(non-cascading) '!subMenuItem1->isHighlighted()' returned FALSE. ()
          Loc: [/home/qt/work/qt/qtquickcontrols2/tests/auto/qquickmenu/tst_qquickmenu.cpp(1206)]
       PASS   : tst_QQuickMenu::Material::subMenuKeyboard(cascading)
       PASS   : tst_QQuickMenu::Material::subMenuKeyboard(cascading,mirrored)
       Totals: 288 passed, 2 failed, 0 skipped, 0 blacklisted, 113562ms
       
       
       10584: ********* Start testing of tst_QQuickMenu *********
       FAIL!  : tst_QQuickMenu::Imagine::subMenuDisabledMouse(non-cascading) '!subMenuItem1->isHighlighted()' returned FALSE. ()
          Loc: [/home/qt/work/qt/qtquickcontrols2/tests/auto/qquickmenu/tst_qquickmenu.cpp(1206)]
       PASS   : tst_QQuickMenu::Imagine::subMenuKeyboard(cascading)
       PASS   : tst_QQuickMenu::Imagine::subMenuKeyboard(cascading,mirrored)
       FAIL!  : tst_QQuickMenu::Material::subMenuDisabledMouse(non-cascading) '!subMenuItem1->isHighlighted()' returned FALSE. ()
          Loc: [/home/qt/work/qt/qtquickcontrols2/tests/auto/qquickmenu/tst_qquickmenu.cpp(1206)]
       PASS   : tst_QQuickMenu::Material::subMenuKeyboard(cascading)
       PASS   : tst_QQuickMenu::Material::subMenuKeyboard(cascading,mirrored)
       Totals: 288 passed, 2 failed, 0 skipped, 0 blacklisted, 112020ms
       

      https://codereview.qt-project.org/c/qt/qtquickcontrols2/+/330936/3#message-1aa790808ed27e835dd87f7f3f41b59af6fdb3e7

      https://testresults.qt.io/logs/qt/qtquickcontrols2/cf119e5b0cd1398184efa77d547bc48d0c273271/LinuxUbuntu_20_04x86_64LinuxUbuntu_20_04x86_64GCCqtci-linux-Ubuntu-20.04-x86_64-50-3d48bcSccache/1e9d2ce63542d63d58fa1b35f2ac2ba669560af8/test_1611557826/log.txt.gz

        For Gerrit Dashboard: QTBUG-90580
        # Subject Branch Project Status CR V

            allan.jensen Allan Sandfeld Jensen
            mitch_curtis Mitch Curtis
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved:

                There are no open Gerrit changes