Adapt to hover on disabled items

Only react to hovered on enabled items.

Fixes: QTBUG-90580
Change-Id: I955033f391e6cd592e3d75b79b9242019db9fcfa
Reviewed-by: Mitch Curtis <mitch.curtis@qt.io>